# bsglrender

./: .gitignore  CMakeLists.txt  README.md
src/: Camera.h  Constants.h  Material.cpp  Material.h  MeshRenderer.cpp  MeshRenderer.h  Program.cpp  Program.h  ProtoDrawing.h  Shader.h  ShaderLoader.cpp  ShaderLoader.h  main.cpp  utils.h
src/shaders/: basic_min.frag  basic_min.vert
